Fix CSS with pinned/profile sidebar collapsed

--- a/resources/assets/sass/boosted.scss
+++ b/resources/assets/sass/boosted.scss
@@ -26,6 +26,7 @@
   margin-bottom: 30px;
   background: var(--sidebar-section-background);
   padding: var(--sidebar-section-padding);
+  overflow: hidden;
 
   .sidebar-section-title {
     font-size: 18px;
